# AetherDocs

./: DEPLOYMENT.md  README.md  render.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  gunicorn_conf.py  main.py  openapi.yaml  pyproject.toml  render-build.sh  requirements.txt  run_dev.bat  start.sh  start_hf.sh  worker.py
backend/app/: celery_app.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: chat.py  download.py  session.py  status.py  upload.py
backend/app/core/: config.py  logging.py
backend/app/schemas/: chat.py  ingestion.py  session_state.py
backend/app/services/media/: converter.py  downloader.py  transcriber.py  youtube_transcript.py
backend/app/services/storage/: local.py  redis.py
backend/app/services/synthesis/: fusion.py  generator.py  pdf_writer.py
backend/app/services/vector/: chunker.py  db.py
backend/app/services/vision/: describer.py  docx_parser.py  pdf_parser.py  pptx_parser.py
backend/app/tasks/: cleanup.py  pipeline.py
backend/app/templates/pdf/: cover.py  styles.py
backend/app/templates/prompts/: deduplication.txt  tutor.txt  vision.txt
backend/app/utils/: formatting.py  validators.py
backend/chroma_db/: chroma.sqlite3
backend/scripts/: download_models.py  stress_test.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  config.ts  types.ts
frontend/src/components/: FeatureBlocks.tsx  FeatureCards.tsx  Footer.tsx  Hero.tsx  (+3 more)
(+10 files in other folders)
